Add browse mode action to action collection again

Summary:
The browse mode action with default shortcut {nav Esc} is not added to action collection (removed in D5824) and therefore not visible/changeable in {nav Settings > Configure Shortcuts}.
Using {nav Esc} as shortcut for e.g. Quit does not work.
This patch re-adds the browse mode action to action collection, but also checks for `ShortcutOverride` events to handle active tool dialogs.

BUG: 385242

Test Plan:
1. Open gwenview
2. Set alternate shortcut {nav Esc} in {nav Settings -> Configure Shortcuts} for Quit command
3. Press {nav Esc}
-> Should exit gwenview

If tool dialog (crop, red eye reduction) is active, pressing {nav Esc} should not exit gwenview, but the tool dialog first.

Reviewers: cfeck, rkflx, ngraham

Reviewed By: rkflx, ngraham

Subscribers: ngraham

Differential Revision: https://phabricator.kde.org/D9943